Extend tests with helper functions
pg 79